// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@Products Cart Action Button Component Tests should render CartArrowDown icon and Colors.SUCCESS_REGULAR when not in cart 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#40a250",
      "borderRadius": 4,
      "flexGrow": 1,
      "justifyContent": "center",
      "maxHeight": 44,
      "minHeight": 44,
      "minWidth": 44,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <CartArrowDown
    color="#FFFFFF"
    style={
      {
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`@Products Cart Action Button Component Tests should render CartArrowUp icon and Colors.DANGER_REGULAR when in cart 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#c04547",
      "borderRadius": 4,
      "flexGrow": 1,
      "justifyContent": "center",
      "maxHeight": 44,
      "minHeight": 44,
      "minWidth": 44,
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <CartArrowUp
    color="#FFFFFF"
    style={
      {
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;
